--- a/boilerplate.html
+++ b/boilerplate.html
@@ -103,7 +103,7 @@
                 <div class="footer-col brand">
                     <ul class="footer-brand">
                         <li><img class="logo-footer" src="assets/images/logo/logo.png" alt=""></li>
-                        <li>Our mission is to empower you, the investor, with tailored property investment opportunities across the thriving UK real estate market.</li>
+                        <li>Our mission is to empower you, the investor, with tailored property investment opportunities across the UK real estate market.</li>
                         <li>
                             <button class="button footer-button">
                                 <div class="button-content">
