--- a/home.html
+++ b/home.html
@@ -102,29 +102,35 @@
                         Our benefits
                     </h1>
                 </div>
-                <div class="card__container">
-                    <div class="card__benefits">
-                        <img src="assets/images/icons/lighting-icon.png" alt="">
-                        <h3>High Quality</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur. Lacus ut et risus ultricies quam deal
-                        </p>
+                <div class="content__container">
+                    <div class="card__container">
+                        <div class="card__benefits">
+                            <img src="assets/images/icons/lighting-icon.png" alt="">
+                            <h3>High Quality</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur. Lacus ut et risus ultricies quam deal
+                            </p>
+                        </div>
+                        <div class="card__benefits">
+                            <img src="assets/images/icons/lighting-icon.png" alt="">
+                            <h3>High Quality</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur. Lacus ut et risus ultricies quam deal
+                            </p>
+                        </div>
+                        <div class="card__benefits">
+                            <img src="assets/images/icons/lighting-icon.png" alt="">
+                            <h3>High Quality</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur. Lacus ut et risus ultricies quam deal
+                            </p>
+                        </div>
                     </div>
-                    <div class="card__benefits">
-                        <img src="assets/images/icons/lighting-icon.png" alt="">
-                        <h3>High Quality</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur. Lacus ut et risus ultricies quam deal
-                        </p>
-                    </div>
-                    <div class="card__benefits">
-                        <img src="assets/images/icons/lighting-icon.png" alt="">
-                        <h3>High Quality</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur. Lacus ut et risus ultricies quam deal
-                        </p>
+                    <div class="card-img__container">
+                        <img src="assets/images/pages/home/image-1.png" alt="">
                     </div>
                 </div>
+               
             </div>
         </section>
     </div>
@@ -135,7 +141,7 @@
                 <div class="footer-col brand">
                     <ul class="footer-brand">
                         <li><img class="logo-footer" src="assets/images/logo/logo.png" alt=""></li>
-                        <li>Our mission is to empower you, the investor, with tailored property investment opportunities across the thriving UK real estate market.</li>
+                        <li>Our mission is to empower you, the investor, with tailored property investment opportunities across the UK real estate market.</li>
                         <li>
                             <button class="button footer-button">
                                 <div class="button-content">
