adding features section and gallery carousel.

--- a/boilerplate.html
+++ b/boilerplate.html
@@ -105,7 +105,7 @@
                         <li><img class="logo-footer" src="assets/images/logo/logo.png" alt=""></li>
                         <li>Our mission is to empower you, the investor, with tailored property investment opportunities across the UK real estate market.</li>
                         <li>
-                            <button class="button footer-button">
+                            <button class="button clear-button">
                                 <div class="button-content">
                                   <span class="text">Contact us</span>
                                 </div>
