--- a/home.html
+++ b/home.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="assets/css/header.css">
     <link rel="stylesheet" href="assets/css/footer.css">
     <link rel="stylesheet" href="assets/css/home.css">
+    <link rel="stylesheet" href="assets/css/gallery.css">
 </head>
 <body>
     <header class="header">
@@ -133,6 +134,87 @@
                
             </div>
         </section>
+        <section class="section section__about">
+            <div class="about__container grid grid--2cols">
+
+                <div class="about__image-container">
+                    <img src="assets/images/pages/home/image-2.png" alt="">
+                </div>
+                <div class="about__content">
+                    <div class="heading__container">
+                        <h1 class="heading">
+                            About us
+                        </h1>
+                    </div>
+                    <div class="about__text">
+                        <p>
+                            Our journey began with a simple vision: to bridge the gap between property dreams and reality. As dedicated property deal sources, we delve deep into the UK real estate market, unearthing hidden gems and exclusive deals tailored to our clients’ needs & aspirations. 
+                        </p>
+                        <p>
+                            Every property we source is a testament to our commitment, passion, and expertise. We don’t just find properties; we create pathways to future homes for tenants and investments for landlords. Let us be the compass that guides you to your property aspirations, turning every brick and mortar into a story of success.
+                        </p>
+                        <button class="button clear-button about-button">
+                            <div class="button-content">
+                              <span class="text">About us</span>
+                              <!-- <div class="arrow">
+                                <img src="assets/img/shapes-icons/icons/arrow.png" alt="">
+                              </div> -->
+                            </div>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="section section__feature">
+            <div class="feature__container grid grid--2cols">
+                <div class="feature-text__container">
+                    <div class="feature-text">
+                        <p class="feature-text-bold">10+</p>
+                        <p>Years of experience</p>
+                    </div>
+                    <div class="feature-text">
+                        <p class="feature-text-bold">400+</p>
+                        <p>Happy clients</p>
+                    </div>
+                    <div class="feature-text">
+                        <p class="feature-text-bold">530+</p>
+                        <p>Properties sold</p>
+                    </div>
+                </div>
+                <div class="feature-icon__container">
+                    <div class="feature-icon">
+                        <img src="assets/images/icons/icon-1.png" alt="">
+                        <p>100% Secure</p>
+                    </div>
+                    <div class="feature-icon">
+                        <img src="assets/images/icons/icon-2.png" alt="">
+                        <p>Quality</p>
+                    </div>
+                    <div class="feature-icon">
+                        <img src="assets/images/icons/icon-3.png" alt="">
+                        <p>Verified</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="section section__gallery">
+            <div class="gallery__container">
+                <div class="gallery__image">
+                    <img class="gallery__item gallery__item-1" src="assets/images/property-photos/SERA-08.jpg" data-index="1" alt="">
+                    <img class="gallery__item gallery__item-2" src="assets/images/property-photos/SERA-02.jpg" data-index="2" alt="">
+                    <img class="gallery__item gallery__item-3" src="assets/images/property-photos/SERA-19.jpg" data-index="3" alt="">
+                    <img class="gallery__item gallery__item-4" src="assets/images/property-photos/SERA-25.jpg" data-index="4" alt="">
+                    <img class="gallery__item gallery__item-5" src="assets/images/property-photos/SERA-33.jpg" data-index="5" alt="">
+                    <!-- <img class="gallery__item gallery__item-6" src="assets/images/property-photos/SERA-06.jpg" data-index="6" alt="">
+                    <img class="gallery__item gallery__item-7" src="assets/images/property-photos/SERA-07.jpg" data-index="7" alt="">
+                    <img class="gallery__item gallery__item-8" src="assets/images/property-photos/SERA-08.jpg" data-index="8" alt=""> -->
+                </div>
+                <div class="gallery-controls">
+
+                </div>
+                
+            </div>
+        </section>
     </div>
 
     <footer class="footer">
@@ -143,7 +225,7 @@
                         <li><img class="logo-footer" src="assets/images/logo/logo.png" alt=""></li>
                         <li>Our mission is to empower you, the investor, with tailored property investment opportunities across the UK real estate market.</li>
                         <li>
-                            <button class="button footer-button">
+                            <button class="button clear-button footer-button">
                                 <div class="button-content">
                                   <span class="text">Contact us</span>
                                 </div>
