adding service-card section. 07/03/2024

--- a/home.html
+++ b/home.html
@@ -215,6 +215,38 @@
                 
             </div>
         </section>
+        <section class="section section__service">
+            <div class="service__container">
+                <div class="heading__container">
+                    <h1 class="heading">
+                        What we provide for you
+                    </h1>
+                </div>
+                <div class="service__content">
+                    <div class="service__card">
+                        <img src="assets/images/icons/lighting-icon.png" alt="">
+                        <h3>Single Buy-to-Let</h3>
+                        <p>
+                            A single buy-to-let property refers to an investment strategy where an individual purchases a property to rent it out to a single tenant or family, as opposed to multiple unrelated tenants. This is the simplest strategy and comes with lower maintenance and management costs. 
+                        </p>
+                    </div>
+                    <div class="service__card">
+                        <img src="assets/images/icons/lighting-icon.png" alt="">
+                        <h3>HMO</h3>
+                        <p>
+                            The demand for affordable housing, especially in urban and university-centric locales, often makes HMOs a sought-after rental choice for both students and professionals. Investors can further enhance the property’s value and rental income by upgrading common areas or individual rooms. 
+                        </p>
+                    </div>
+                    <div class="service__card">
+                        <img src="assets/images/icons/lighting-icon.png" alt="">
+                        <h3>Serviced Accomodation</h3>
+                        <p>
+                            For investors, off-market properties present a golden opportunity to realize significant savings. Without the customary competition and public glare associated with open market sales, the path to acquisition is often smoother and less costly.  
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
 
     <footer class="footer">
