--- a/home.html
+++ b/home.html
@@ -6,12 +6,13 @@
     <title>help4propertydeals</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="assets/css/general.css">
     <link rel="stylesheet" href="assets/css/button.css">
     <link rel="stylesheet" href="assets/css/header.css">
     <link rel="stylesheet" href="assets/css/footer.css">
     <link rel="stylesheet" href="assets/css/home.css">
-    <link rel="stylesheet" href="assets/css/gallery.css">
+    <link rel="stylesheet" href="assets/css/slider.css">
 </head>
 <body>
     <header class="header">
@@ -197,23 +198,34 @@
                 </div>
             </div>
         </section>
-        <section class="section section__gallery">
-            <div class="gallery__container">
-                <div class="gallery__image">
-                    <img class="gallery__item gallery__item-1" src="assets/images/property-photos/SERA-08.jpg" data-index="1" alt="">
-                    <img class="gallery__item gallery__item-2" src="assets/images/property-photos/SERA-02.jpg" data-index="2" alt="">
-                    <img class="gallery__item gallery__item-3" src="assets/images/property-photos/SERA-19.jpg" data-index="3" alt="">
-                    <img class="gallery__item gallery__item-4" src="assets/images/property-photos/SERA-25.jpg" data-index="4" alt="">
-                    <img class="gallery__item gallery__item-5" src="assets/images/property-photos/SERA-33.jpg" data-index="5" alt="">
-                    <img class="gallery__item gallery__item-6" src="assets/images/property-photos/SERA-18.jpg" data-index="6" alt="">
-                    <img class="gallery__item gallery__item-7" src="assets/images/property-photos/SERA-03.jpg" data-index="7" alt="">
-                    <img class="gallery__item gallery__item-8" src="assets/images/property-photos/SERA-22.jpg" data-index="8" alt="">
+        <section class="section section__slider">
+            <div class="slider__container">
+                <div class="slider-wrapper">
+                  <button id="prev-slide" class="slide-button material-symbols-rounded">
+                    chevron_left
+                  </button>
+                  <ul class="image-list">
+                    <img class="image-item" src="assets/images/property-photos/SERA-08.jpg" alt="img-1" />
+                    <img class="image-item" src="assets/images/property-photos/SERA-02.jpg" alt="img-2" />
+                    <img class="image-item" src="assets/images/property-photos/SERA-19.jpg" alt="img-3" />
+                    <img class="image-item" src="assets/images/property-photos/SERA-25.jpg" alt="img-4" />
+                    <img class="image-item" src="assets/images/property-photos/SERA-33.jpg" alt="img-5" />
+                    <img class="image-item" src="assets/images/property-photos/SERA-18.jpg" alt="img-6" />
+                    <img class="image-item" src="assets/images/property-photos/SERA-08.jpg" alt="img-7" />
+                    <img class="image-item" src="assets/images/property-photos/SERA-11.jpg" alt="img-8" />
+                    <img class="image-item" src="assets/images/property-photos/SERA-26.jpg" alt="img-9" />
+                    <img class="image-item" src="assets/images/property-photos/SERA-03.jpg" alt="img-10" />
+                  </ul>
+                  <button id="next-slide" class="slide-button material-symbols-rounded">
+                    chevron_right
+                  </button>
                 </div>
-                <div class="gallery-controls">
-
+                <div class="slider-scrollbar">
+                  <div class="scrollbar-track">
+                    <div class="scrollbar-thumb"></div>
+                  </div>
                 </div>
-                
-            </div>
+              </div>
         </section>
         <section class="section section__service">
             <div class="service__container">
