--- a/home.html
+++ b/home.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="assets/css/general.css">
     <link rel="stylesheet" href="assets/css/button.css">
     <link rel="stylesheet" href="assets/css/header.css">
@@ -278,6 +279,70 @@
                         <h3>Serviced Accomodation</h3>
                         <p>
                             For investors, off-market properties present a golden opportunity to realize significant savings. Without the customary competition and public glare associated with open market sales, the path to acquisition is often smoother and less costly.  
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="section section__faq">
+            <div class="faq__container">
+                <div class="about__content" id="faq-content">
+                    <div class="heading__container">
+                        <h1 class="heading">
+                            Frequently asked question
+                        </h1>
+                    </div>
+                    <div class="about__text">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur. Netus nisi tortor donec convallis nulla netus cras netus nibh. Gravida fames vulputate justo sodales dui. Vestibulum dignissim aliquam vitae posuere sagittis lectus consectetur vestibulum. Bibendum lobortis enim molestie enim.
+                        </p>
+                        <button class="button clear-button about-button">
+                            <div class="button-content">
+                              <span class="text">Contact us</span>
+                              <!-- <div class="arrow">
+                                <img src="assets/img/shapes-icons/icons/arrow.png" alt="">
+                              </div> -->
+                            </div>
+                        </button>
+                    </div>
+                </div>
+                <div class="accordion">
+                    <div class="accordion-content">
+                        <div class="acc-header">
+                            <span class="title">Do you offer Landlords/ Investors services?</span>
+                            <i class="fa-solid fa-plus"></i>
+                        </div>
+                        <p class="description">
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus nobis ut perspiciatis minima quidem nisi, obcaecati, delectus consequatur fuga nostrum iusto ipsam ducimus quibusdam possimus. Maiores non enim numquam voluptatem?
+                        </p>
+                    </div>
+                    <div class="accordion-content">
+                        <div class="acc-header">
+                            <span class="title">Where do I invest?</span>
+                            <i class="fa-solid fa-plus"></i>
+                        </div>
+                        <p class="description">
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus nobis ut perspiciatis minima quidem nisi, obcaecati, delectus consequatur fuga nostrum iusto ipsam ducimus quibusdam possimus. Maiores non enim numquam voluptatem?
+                        </p>
+                    </div>
+                    <div class="accordion-content">
+                        <div class="acc-header">
+                            <span class="title">
+                                What returns can I expect from investing in property?</span>
+                            <i class="fa-solid fa-plus"></i>
+                        </div>
+                        <p class="description">
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus nobis ut perspiciatis minima quidem nisi, obcaecati, delectus consequatur fuga nostrum iusto ipsam ducimus quibusdam possimus. Maiores non enim numquam voluptatem?
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto neque, sed inventore illum ut quis ducimus deleniti temporibus maiores? At nisi sed pariatur cupiditate quidem quod adipisci aut, eos quis minima voluptates non veniam ipsam quasi architecto ducimus error eum id ab, suscipit doloribus, ut accusantium consequuntur voluptate! Unde, hic sed rerum officia totam id libero officiis nihil rem sequi porro labore praesentium repudiandae a blanditiis molestias nisi beatae natus! Ea, ut voluptates, natus harum nesciunt odio hic eveniet reprehenderit veritatis, possimus tempora magni soluta eaque quidem neque maxime nostrum sapiente commodi? Earum ex cumque cupiditate dicta, tempora temporibus quaerat.
+                        </p>
+                    </div>
+                    <div class="accordion-content">
+                        <div class="acc-header">
+                            <span class="title">What are the main benefits of property investment?</span>
+                            <i class="fa-solid fa-plus"></i>
+                        </div>
+                        <p class="description">
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus nobis ut perspiciatis minima quidem nisi, obcaecati, delectus consequatur fuga nostrum iusto ipsam ducimus quibusdam possimus. Maiores non enim numquam voluptatem?
                         </p>
                     </div>
                 </div>
