added video section. 11/03/2024

--- a/home.html
+++ b/home.html
@@ -266,6 +266,12 @@
               </div>
         </section>
 
+        <section class="section section__video">
+            <div class="video__container">
+                <iframe class="iframe"  width="560" height="315" src="https://www.youtube.com/embed/rDKjau9Wp6o?si=ek4A36oJHMaii4fP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+        </section>
+
         <!-- SERVICES SECTION -->
         <section class="section section__service">
             <div class="service__container">
