--- a/home.html
+++ b/home.html
@@ -266,9 +266,11 @@
               </div>
         </section>
 
+        <!-- VIDEO SECTION -->
         <section class="section section__video">
             <div class="video__container">
-                <iframe class="iframe"  width="560" height="315" src="https://www.youtube.com/embed/rDKjau9Wp6o?si=ek4A36oJHMaii4fP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe class="iframe" src="https://www.youtube.com/embed/K4TOrB7at0Y?si=xLLsefKE2qG7L_mn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <!-- <iframe class="iframe" src="https://www.youtube.com/embed/K4TOrB7at0Y?si=xLLsefKE2qG7L_mn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> -->
             </div>
         </section>
 
