created form section. and media queries for font-sizes 12/03/2024

--- a/boilerplate.html
+++ b/boilerplate.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="assets/css/button.css">
     <link rel="stylesheet" href="assets/css/header.css">
     <link rel="stylesheet" href="assets/css/footer.css">
+    <link rel="stylesheet" href="assets/css/form.css">
 </head>
 <body>
     <header class="header">
@@ -95,6 +96,46 @@
     </header>
     <div class="container__body">
 
+        <section class="section section__form">
+            <div class="form__container">
+
+                <div class="form__section">
+                    <form action="" class="web__form">
+                        <div class="heading__container">
+                            <h1 class="heading">
+                                Need extra information? 
+                            </h1>
+                            <p>
+                                Send us your details and we will contact you soon.
+                            </p>
+                        </div>
+
+                        <div class="input__box">
+                            <input type="text" class="input" name="name" placeholder="Name">
+                            <input type="tel" class="input" name="phone" placeholder="Telephone">
+                            <input type="email" class="input" name="email" placeholder="Email">
+                        </div>
+                        
+                       
+                        <div class="checkbox-container">
+                            <input type="checkbox" id="subscribe" name="subscribe">
+                            <label for="subscribe" class="label">I agree to have my information stored Privacy Policy.</label>
+                        </div>
+
+                        <button class="button blue-button btn__form">
+                            <div class="button-content">
+                              <span class="text">Landlords</span>
+                            </div>
+                        </button>
+
+                    </form>
+                </div>
+
+                <div class="landlord__image">
+                    <img src="assets/images/pages/home/image-7.png" alt="">
+                </div>
+            </div>
+        </section>
     </div>
 
     <footer class="footer">
