--- a/boilerplate.html
+++ b/boilerplate.html
@@ -15,10 +15,12 @@
 <body>
     <header class="header">
         <!--NAVBAR-->
-        <nav class="navbar navbar-expand-lg navbar-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
             <div class="container-xxl">
                 <div class="logo navbar-brand">
-                    <img src="assets/images/logo/logo.png" alt="Help4PropertyDeals Logo">
+                    <a href="home.html">
+                        <img src="assets/images/logo/logo.png" alt="Help4PropertyDeals Logo">
+                    </a>
                 </div>
                 <!-- Toggle button form Mobile nav -->
                 <button 
@@ -124,7 +126,7 @@
 
                         <button class="button blue-button btn__form">
                             <div class="button-content">
-                              <span class="text">Landlords</span>
+                              <span class="text">Send</span>
                             </div>
                         </button>
 
