completed subscriber newsletter section 12/03/2024

--- a/home.html
+++ b/home.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="assets/css/slider.css">
     <link rel="stylesheet" href="assets/css/testimonial.css">
     <link rel="stylesheet" href="assets/css/form.css">
+    <link rel="stylesheet" href="assets/css/subscribe.css">
 </head>
 <body>
     <header class="header">
@@ -252,7 +253,6 @@
                     <img class="image-item" src="assets/images/property-photos/SERA-33.jpg" alt="img-31" />
                     <img class="image-item" src="assets/images/property-photos/SERA-08.jpg" alt="img-32" />
                     <img class="image-item" src="assets/images/property-photos/SERA-02.jpg" alt="img-33" />
-
                   </ul>
                   <button id="next-slide" class="slide-button material-symbols-rounded">
                     chevron_right
@@ -610,9 +610,7 @@
             </div>
         </section>
 
-        <!--
-            FORMS SECTION
-        -->
+        <!-- FORMS SECTION -->
         <section class="section section__form">
             <div class="form__container">
 
@@ -654,6 +652,25 @@
             </div>
         </section>
 
+        <!-- SECTION NEWSLETTER -->
+        <section class="section section__subscribe">
+            <div class="subscribe__container">
+                <div class="container2__image">
+                    <img src="assets/images/pages/home/image-8.png" alt="">
+                </div>
+                <div class="subscribe__card">
+                    <div class="heading__container">
+                        <h1 class="heading">
+                            Subscriber Newsletter 
+                        </h1>
+                    </div>
+                    <div class="input-box">
+                        <input type="email" placeholder="Enter your email..." />
+                        <button class="button__sub">Subscribe Now</button>
+                      </div>
+                </div>
+            </div>
+        </section>
         
     </div>
 
