--- a/boilerplate.html
+++ b/boilerplate.html
@@ -6,11 +6,13 @@
     <title>help4propertydeals</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+    <!-- <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" /> -->
     <link rel="stylesheet" href="assets/css/general.css">
     <link rel="stylesheet" href="assets/css/button.css">
     <link rel="stylesheet" href="assets/css/header.css">
     <link rel="stylesheet" href="assets/css/footer.css">
     <link rel="stylesheet" href="assets/css/form.css">
+    <link rel="stylesheet" href="assets/css/subscribe.css">
 </head>
 <body>
     <header class="header">
@@ -97,7 +99,7 @@
         </section>
     </header>
     <div class="container__body">
-
+        <!-- SECTION FORM -->
         <section class="section section__form">
             <div class="form__container">
 
@@ -135,6 +137,26 @@
 
                 <div class="landlord__image">
                     <img src="assets/images/pages/home/image-7.png" alt="">
+                </div>
+            </div>
+        </section>
+
+        <!-- SECTION NEWSLETTER -->
+        <section class="section section__subscribe">
+            <div class="subscribe__container">
+                <div class="container2__image">
+                    <img src="assets/images/pages/home/image-8.png" alt="">
+                </div>
+                <div class="subscribe__card">
+                    <div class="heading__container">
+                        <h1 class="heading">
+                            Subscriber Newsletter 
+                        </h1>
+                    </div>
+                    <div class="input-box">
+                        <input type="email" placeholder="Enter your email..." />
+                        <button class="button__sub">Subscribe Now</button>
+                    </div>
                 </div>
             </div>
         </section>
