completed entire home page 12/03/2024 6:00pm

--- a/home.html
+++ b/home.html
@@ -637,7 +637,7 @@
                             <label for="subscribe" class="label">I agree to have my information stored Privacy Policy.</label>
                         </div>
 
-                        <button class="button blue-button btn__form">
+                        <button class="button red-button btn__form">
                             <div class="button-content">
                               <span class="text">Send</span>
                             </div>
