adding about page and queries css 14/03/2024 1.30pm

--- a/home.html
+++ b/home.html
@@ -646,7 +646,7 @@
                     </form>
                 </div>
 
-                <div class="landlord__image">
+                <div class="container__image">
                     <img src="assets/images/pages/home/image-7.png" alt="">
                 </div>
             </div>
