--- a/home.html
+++ b/home.html
@@ -47,10 +47,10 @@
                 <div class="collapse navbar-collapse justify-content-end align-center" id="main-nav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><span>Home</span></a>
+                            <a class="nav-link" href="home.html"><span>Home</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#"><span>About</span></a>
+                            <a class="nav-link" href="about.html"><span>About</span></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#"><span>Landlords</span></a>
