continuing about page  added video and teams section 16/03/2024 5.45pm

--- a/about.html
+++ b/about.html
@@ -149,6 +149,71 @@
                 </div>
             </section>
 
+
+            <!-- TEAM SECTION -->
+            <section class="section section__team">
+                <div class="team__container">
+                    <div class="heading__container">
+                        <h1 class="heading">
+                            Meet Our Team 
+                        </h1>
+                    </div>
+                    <div class="team__cards">
+                        <div class="team__card">
+                            <img src="assets/images/pages/about/team-1.png" alt="">
+                            <h3>Michael Adeleye</h3>
+                            <p>
+                                Founder & CEO
+                            </p>
+                        </div>
+                        <div class="team__card">
+                            <img src="assets/images/pages/about/team-2.png" alt="">
+                            <h3>Emil Maccalum</h3>
+                            <p>
+                                Chairman
+                            </p>
+                        </div>
+                        <div class="team__card">
+                            <img src="assets/images/pages/about/team-3.png" alt="">
+                            <h3>Sarah Austin</h3>
+                            <p>
+                                Agent
+                            </p>
+                        </div>
+                        <div class="team__card">
+                            <img src="assets/images/pages/about/team-4.png" alt="">
+                            <h3>Melanie Schiff</h3>
+                            <p>
+                                Manager
+                            </p>
+                        </div>
+                        <div class="team__card">
+                            <img src="assets/images/pages/about/team-5.png" alt="">
+                            <h3>Katy Wilson</h3>
+                            <p>
+                                Co-founder
+                            </p>
+                        </div>
+                        <div class="team__card">
+                            <img src="assets/images/pages/about/team-6.png" alt="">
+                            <h3>Rob Moore</h3>
+                            <p>
+                                Manager
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- VIDEO SECTION -->
+            <section class="section section__video">
+
+                <div class="video__container">
+                    <iframe class="iframe" src="https://www.youtube.com/embed/K4TOrB7at0Y?si=xLLsefKE2qG7L_mn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                    <!-- <iframe class="iframe" src="https://www.youtube.com/embed/K4TOrB7at0Y?si=xLLsefKE2qG7L_mn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> -->
+                </div>
+            </section>
+
             <!-- SECTION FORM -->
             <section class="section section__form">
                 <div class="form__container">
