about to start invest section

--- a/about.html
+++ b/about.html
@@ -134,6 +134,7 @@
                 </div>
             </section>
 
+            <!-- PROPERTY SECTION -->
             <section class="section section__property">
                 <div class="property__container">
                     <div class="property__text">
@@ -149,6 +150,13 @@
                 </div>
             </section>
 
+
+            <!-- SECTION INVEST-->
+            <section class="section__invest">
+                <div class="invest__container">
+                    
+                </div>
+            </section>
 
             <!-- TEAM SECTION -->
             <section class="section section__team">
