--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
                                 <a class="nav-link" href="about.html"><span>About</span></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#"><span>Landlords</span></a>
+                                <a class="nav-link" href="landlord.html"><span>Landlords</span></a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#"><span>Investors</span></a>
