--- a/boilerplate.html
+++ b/boilerplate.html
@@ -123,7 +123,7 @@
                        
                         <div class="checkbox-container">
                             <input type="checkbox" id="subscribe" name="subscribe">
-                            <label for="subscribe" class="label">I agree to have my information stored Privacy Policy.</label>
+                            <label for="subscribe" class="label">I agree to have my information stored&nbsp<span>Privacy Policy.</span> </label>
                         </div>
 
                         <button class="button red-button btn__form">
