--- a/home.html
+++ b/home.html
@@ -634,7 +634,7 @@
                        
                         <div class="checkbox-container">
                             <input type="checkbox" id="subscribe" name="subscribe">
-                            <label for="subscribe" class="label">I agree to have my information stored Privacy Policy.</label>
+                            <label for="subscribe" class="label">I agree to have my information stored<span>&nbsp Privacy Policy.</span> </label>
                         </div>
 
                         <button class="button red-button btn__form">
