--- a/landlord.html
+++ b/landlord.html
@@ -157,7 +157,7 @@
                        
                         <div class="checkbox-container">
                             <input type="checkbox" id="subscribe" name="subscribe">
-                            <label for="subscribe" class="label">I agree to have my information stored Privacy Policy.</label>
+                            <label for="subscribe" class="label">I agree to have my information stored&nbsp<span>Privacy Policy.</span> </label>
                         </div>
 
                         <button class="button red-button btn__form">
@@ -195,7 +195,7 @@
                        
                         <div class="checkbox-container">
                             <input type="checkbox" id="subscribe" name="subscribe">
-                            <label for="subscribe" class="label">I agree to have my information stored Privacy Policy.</label>
+                            <label for="subscribe" class="label">I agree to have my information stored&nbsp<span>Privacy Policy.</span> </label>
                         </div>
 
                         <button class="button red-button btn__form">
