--- a/home.html
+++ b/home.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="assets/css/header.css">
     <link rel="stylesheet" href="assets/css/footer.css">
     <link rel="stylesheet" href="assets/css/home.css">
+    <link rel="stylesheet" href="assets/css/accordian.css">
     <link rel="stylesheet" href="assets/css/slider.css">
     <link rel="stylesheet" href="assets/css/testimonial.css">
     <link rel="stylesheet" href="assets/css/form.css">
@@ -634,7 +635,7 @@
                        
                         <div class="checkbox-container">
                             <input type="checkbox" id="subscribe" name="subscribe">
-                            <label for="subscribe" class="label">I agree to have my information stored<span>&nbsp Privacy Policy.</span> </label>
+                            <label for="subscribe" class="label">I agree to have my information stored&nbsp<span>Privacy Policy.</span> </label>
                         </div>
 
                         <button class="button red-button btn__form">
