--- a/landlord.html
+++ b/landlord.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <!-- <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" /> -->
     <link rel="stylesheet" href="assets/css/general.css">
     <link rel="stylesheet" href="assets/css/button.css">
@@ -14,6 +15,7 @@
     <link rel="stylesheet" href="assets/css/footer.css">
     <link rel="stylesheet" href="assets/css/form.css">
     <link rel="stylesheet" href="assets/css/subscribe.css">
+    <link rel="stylesheet" href="assets/css/accordian.css">
     <link rel="stylesheet" href="assets/css/landlord.css">
     <link rel="stylesheet" href="assets/css/queries.css">
 </head>
@@ -131,16 +133,16 @@
                                 </div>
                                 <ul class="options">
                                     <li class="option">
-                                        <span>Web Development</span>
+                                        <span>Simple BTL</span>
                                     </li>
                                     <li class="option">
-                                        <span>App Development</span>
+                                        <span>HMO</span>
                                     </li>
                                     <li class="option">
-                                        <span>Databases</span>
+                                        <span>Rent 2 Rent</span>
                                     </li>
                                     <li class="option">
-                                        <span>Cloud Computing</span>
+                                        <span>Serviced Accomodation</span>
                                     </li>
                                     <li class="option">
                                         <span>Other</span>
@@ -166,7 +168,106 @@
                             </div>
                         </button>
 
+                        <div class="how-it-works">
+                            <h1>How it works</h1>
+                            <div class="steps">
+                                <img src="assets/images/icons/form-steps.png" alt="">
+                            </div>
+                        </div>
+
                     </form>
+                </div>
+            </div>
+        </section>
+
+        <!-- SECTION PREP RENT -->
+        <section class="section section__prep">
+            <div class="prep__container">
+                <div class="image__container">
+                    <img src="assets/images/pages/landlords/image-1.png" alt="">
+                </div>
+                <div class="prep__content">
+                    <div class="heading__container">
+                        <h1 class="heading">
+                            Preparing to rent out your property
+                        </h1>
+                    </div>
+                    <p>
+                        Before you begin the process of letting your property, you need to be thoroughly prepared. There is a lot to do before you can think about getting yournew tenants through the door. More and more legislation is coming out every year, making it increasingly difficult for Landlords to comply.
+                    </p>
+                    <div class="accordion">
+                        <div class="accordion-content">
+                            <div class="acc-header">
+                                <span class="title">Preparing to rent out your property</span>
+                                <i class="fa-solid fa-plus"></i>
+                            </div>
+                            <p class="description">
+                                Lorem estibulum dignissim aliquam vitae posuere sagittis lectus consectetur vestibulum. Bibendum lobortis enim Lorem estibulum dignissim aliquam vitae posuere sagittis lectus consectetur vestibulum. Bibendum lobortis enim Lorem estibulum dignissim aliquam vitae posuere sagittis lectus consectetur vestibulum. Bibendum lobortis enim Lorem estibulum dignissim aliquam vitae posuere sagittis lectus consectetur vestibulum. Bibendum lobortis enim 
+                            </p>
+                        </div>
+                        <div class="accordion-content">
+                            <div class="acc-header">
+                                <span class="title">Health and Safety</span>
+                                <i class="fa-solid fa-plus"></i>
+                            </div>
+                            <p class="description">
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus nobis ut perspiciatis minima quidem nisi, obcaecati, delectus consequatur fuga nostrum iusto ipsam ducimus quibusdam possimus. Maiores non enim numquam voluptatem?
+                            </p>
+                        </div>
+                        <div class="accordion-content">
+                            <div class="acc-header">
+                                <span class="title">
+                                    Certification and other legislation</span>
+                                <i class="fa-solid fa-plus"></i>
+                            </div>
+                            <p class="description">
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus nobis ut perspiciatis minima quidem nisi, obcaecati, delectus consequatur fuga nostrum iusto ipsam ducimus quibusdam possimus. Maiores non enim numquam voluptatem?
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto neque, sed inventore illum ut quis ducimus deleniti temporibus maiores? At nisi sed pariatur cupiditate quidem quod adipisci aut, eos quis minima voluptates non veniam ipsam quasi architecto ducimus error eum id ab, suscipit doloribus, ut accusantium consequuntur voluptate! Unde, hic sed rerum officia totam id libero officiis nihil rem sequi porro labore praesentium repudiandae a blanditiis molestias nisi beatae natus! Ea, ut voluptates, natus harum nesciunt odio hic eveniet reprehenderit veritatis, possimus tempora magni soluta eaque quidem neque maxime nostrum sapiente commodi? Earum ex cumque cupiditate dicta, tempora temporibus quaerat.
+                            </p>
+                        </div>
+                        <div class="accordion-content">
+                            <div class="acc-header">
+                                <span class="title">Lorem estibulum dignissim aliquam vitae</span>
+                                <i class="fa-solid fa-plus"></i>
+                            </div>
+                            <p class="description">
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus nobis ut perspiciatis minima quidem nisi, obcaecati, delectus consequatur fuga nostrum iusto ipsam ducimus quibusdam possimus. Maiores non enim numquam voluptatem?
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- SECTION LETTINGS -->
+        <section class="section section__lettings">
+            <div class="lettings__container">
+                <div class="intro__text">
+                    <div class="heading__container">
+                        <h1 class="heading">
+                            Rental Valuation & Lettings
+                        </h1>
+                    </div>
+                    <p>
+                        For every landlord we deal with it’s important to take a pro-active and consultative approach, our service starts from the moment a landlord or potential landlord starts to think about renting a property out, not just when the keys are handed over.
+                    </p>
+                    <p>
+                        Although the majority of our business is done by phone, email and using the internet, our clients are always welcome to arrange a face-to-face meeting to sit down, have a brew and discuss a property they rent out, are looking to rent out or are thinking of adding to their portfolio.
+                    </p>
+                    <p>
+                        We charge no marketing fees; hold landlords to no obligations and only charge when we find the tenants on a strictly no-let, no-fee basis. In most instances the initial meeting will be at the property in question, we will consult on what needs to be done prior to let, what market we will be aiming for, time frames and rental potential.
+                    </p>
+                    <button class="button red-button">
+                        <div class="button-content">
+                          <span class="text">Contact us</span>
+                          <!-- <div class="arrow">
+                            <img src="assets/img/shapes-icons/icons/arrow.png" alt="">
+                          </div> -->
+                        </div>
+                    </button>
+                </div>
+                <div class="image__container">
+                    <img src="assets/images/pages/landlords/image-2.png" alt="">
                 </div>
             </div>
         </section>
