landlords page tweaks 19/03/2024

--- a/landlord.html
+++ b/landlord.html
@@ -125,7 +125,7 @@
                             <div class="dropdown">
                                 <div class="select-menu">
                                     <div class="select-btn">
-                                        <span class="selected">What services can we help you with?</span>
+                                        <span class="selected">What strategy are you looking to do?</span>
                                         <i class='bx bxs-chevron-down'></i>
                                     </div>
                                     
