landlords page added market section 19/03/2024

--- a/landlord.html
+++ b/landlord.html
@@ -272,6 +272,39 @@
             </div>
         </section>
 
+        <!-- SECTION MARKET -->
+        <section class="section section__market">
+            <div class="market__container">
+                <div class="image__container">
+                    <img src="assets/images/pages/landlords/image-3.png" alt="">
+                </div>
+                <div class="intro__text">
+                    <div class="heading__container">
+                        <h1 class="heading">
+                            Marketing your property
+                        </h1>
+                    </div>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur. Orci scelerisque praesent cursus sed magna dui nisl pretium diam. Lacus risus massa erat suspendisse vitae molestie sapien sit. Dolor varius quis sit amet in. Fermentum pharetra nunc condimentum pulvinar massa nec egestas habitasse.
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur. Orci scelerisque praesent cursus sed magna dui nisl pretium diam. Lacus risus massa erat suspendisse vitae molestie sapien sit. Dolor varius quis sit amet in. Fermentum pharetra nunc condimentum pulvinar massa nec egestas habitasse.
+                    </p>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur. Orci scelerisque praesent cursus sed magna dui nisl pretium diam. Lacus risus massa erat suspendisse vitae
+                    </p>
+                    <button class="button blue-button">
+                        <div class="button-content">
+                          <span class="text">Contact us</span>
+                          <!-- <div class="arrow">
+                            <img src="assets/img/shapes-icons/icons/arrow.png" alt="">
+                          </div> -->
+                        </div>
+                    </button>
+                </div>
+            </div>
+        </section>
+
         <!-- SECTION FORM -->
         <section class="section section__form">
             <div class="form__container">
