done with landlord cards (benefits) section and with the whole landlord page. 21/03/2024 10:37am

--- a/landlord.html
+++ b/landlord.html
@@ -272,6 +272,52 @@
             </div>
         </section>
 
+        <!-- SECTION LANDLORD CARDS -->
+        <section class="section section__landlord-card">
+            <div class="landlord-card__container">
+                <div class="heading__container">
+                    <h1 class="heading">
+                        Our Benefits
+                    </h1>
+                </div>
+                <div class="landlord__content">
+                    <div class="landlord__card">
+                        <div class="icon__img">
+                            <img src="assets/images/icons/icon-4.png" alt="">
+                        </div>
+                        <div class="landlord__text">
+                            <h3>New Landlord Instruction</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur. Lacus velit habitant lacus id. Eu urna diam etiam velit tellus feugiat. acus velit acus velit habitant lacus id. Eu urna diam etiam velit tellus feugiat.  Deacus id. Eu urna diam etiam velit tellus 
+                            </p>
+                        </div>
+                    </div>
+                    <div class="landlord__card">
+                        <div class="icon__img">
+                            <img src="assets/images/icons/icon-5.png" alt="">
+                        </div>
+                        <div class="landlord__text">
+                            <h3>Marketing Consultation</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur. Lacus velit habitant lacus id. Eu urna diam etiam velit tellus feugiat. acus velit acus velit habitant lacus id. Eu urna diam etiam velit tellus feugiat.  Deacus id. Eu urna diam etiam velit tellus 
+                            </p>
+                        </div>
+                    </div>
+                    <div class="landlord__card">
+                        <div class="icon__img">
+                            <img src="assets/images/icons/icon-6.png" alt="">
+                        </div>
+                        <div class="landlord__text">
+                            <h3>New Property Instruction</h3>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur. Lacus velit habitant lacus id. Eu urna diam etiam velit tellus feugiat. acus velit acus velit habitant lacus id. Eu urna diam etiam velit tellus feugiat.  Deacus id. Eu urna diam etiam velit tellus 
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- SECTION MARKET -->
         <section class="section section__market">
             <div class="market__container">
